<resources>
    <string name="app_name">E Attendance</string>
    <string name="class_string">Class</string>
    <string name="section_string">Section</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="select_class">Select Class</string>
    <string name="select_section">Select Section</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_lecture">Select Lecture</string>
    <string name="update_attendance">Update Attendance</string>
    <string name="submit_attendance">Submit Attendance</string>
    <string name="add_student">Add Students</string>
    <string name="add_teachers">Add Teacher</string>
    <string name="edit_students">Edit Students</string>
    <string name="enter_student_s_full_name">Enter Student\'s Full Name*</string>
    <string name="teacher_code">Enter Teacher Code</string>
    <string name="enter_subject">Enter Subject*</string>
    <string name="enter_class">Enter Class*</string>
    <string name="enter_section">Enter Section*</string>
    <string name="teacher_name">Enter Teacher Name</string>
    <string name="note">*Classes will be created automatically</string>
    <string name="submit">Submit</string>
    <string name="rollno">RollNo.*</string>
    <string name="section">Section*</string>
    <string name="classs">Class*</string>
    <string name="enter_classandsection">Choose Class And Section</string>
    <string name="enter_stdent">Enter Student Name To Add</string>
    <string name="add">ADD</string>
    <string name="showstudent">View Students</string>
    <string name="login">LOGIN</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="loginTo">Login To E-Attendance</string>
    <string name="school_code">School Code</string>
    <string name="teacher_ID">Teacher ID</string>
    <string name="you_a">"You are a? "</string>
    <string name="Admin">Admin</string>
    <string name="student">STUDENT</string>
    <string name="teacher">TEACHER</string>
    <string name="new_user">New User? Sign Up Here</string>
    <string name="email">"Email "</string>
    <string name="school_name">Enter School Name</string>
    <string name="enter_email">Enter School Email Address</string>
    <string name="enter_password">Enter Password (Min. 8 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_school_code">Enter School Code</string>
    <string name="register">REGISTER</string>
    <string name="already_a_user">Already User ! Login Here</string>
    <string name="registeredId">Enter Registered Email Id</string>
    <string name="send_link">Send Link</string>
    <string name="signout">SIGN OUT</string>
    <string name="enter_school_code2">"School Code"</string>
    <string name="enter_teacherID">Enter Teacher ID</string>
    <string name="remove_teacher">REMOVE TEACHER</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="te">TE</string>
    <string name="teacherID">ID</string>
    <string name="search">SEARCH</string>
    <string name="save">SAVE CHANGES</string>
</resources>