<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:inputType="textCapWords"
        android:hint="@string/school_name"
        android:background="@drawable/round_corner_bg"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="90dp"/>
    <EditText
        android:id="@+id/school_code"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:hint="@string/enter_school_code"
        android:background="@drawable/round_corner_bg"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:paddingLeft="10dp"
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:background="@drawable/round_corner_bg"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:paddingLeft="10dp"
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:background="@drawable/round_corner_bg"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:paddingLeft="10dp"
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:background="@drawable/round_corner_bg"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="80dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:background="#228899"
        />
    <TextView
        android:id="@+id/login_btn_on_signup"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="80dp"
        android:text="@string/already_a_user"
        android:textAlignment="center"/>
    </LinearLayout>
</ScrollView>