<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserType"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/you_a"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/Admin"
        android:textSize="20sp"
        android:id="@+id/admin"
        android:background="@drawable/round_corner_bg"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/teacher"
        android:textSize="20sp"
        android:id="@+id/teacher"
        android:background="@drawable/round_corner_bg"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/student"
        android:textSize="20sp"
        android:id="@+id/student"
        android:background="@drawable/round_corner_bg"/>

</LinearLayout>