<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbg"
    tools:context=".authentication.AdminAuth">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginTo"
            android:layout_marginTop="100dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:textAlignment="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:hintTextColor="@color/black"
            android:layout_height="55dp"
            android:layout_marginTop="60dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginHorizontal="30sp"
            android:background="@drawable/round_corner_bg"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/input_email"
            android:importantForAutofill="no"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:hintTextColor="@color/black"
            android:layout_marginTop="40dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/round_corner_bg"
            android:drawableEnd="@drawable/ic_baseline_code_24"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/enter_school_code2"
            android:inputType="number"
            android:id="@+id/code"
            android:importantForAutofill="no"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:hintTextColor="@color/black"
            android:layout_marginTop="40dp"
            app:passwordToggleEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/round_corner_bg"
            android:paddingStart="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/input_password"
            android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="80dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:background="#228899"
            android:id="@+id/login_btn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:id="@+id/signup_btn_on_login"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:layout_marginTop="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:id="@+id/forgot_password_on_login"/>
    </LinearLayout>
</ScrollView>