<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student.PasswordStudent"
    android:background="@drawable/newbg"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="180dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/round_corner_bg"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/username"
            android:inputType="textCapWords"
            android:id="@+id/username"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/submit"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/submit"
        android:background="@color/black"
        android:textColor="@color/colorbg"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/round_corner_bg"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/password"
            android:inputType="textCapWords"
            android:id="@+id/newPass"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/save"
        android:text="@string/save"
        android:background="@color/black"
        android:textColor="@color/colorbg"/>

</LinearLayout>