<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teacher.TeacherActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_class"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"/>
        <Spinner

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="80dp"
            android:background="@drawable/round_corner_bg"
            android:id="@+id/class_spinner"
            android:textAlignment="center"
            android:elevation="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_subject"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"/>

        <Spinner

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="80dp"
            android:background="@drawable/round_corner_bg"
            android:id="@+id/subject_spinner"
            android:textAlignment="center"
            android:elevation="5dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_lecture"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"/>

        <Spinner

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="80dp"
            android:background="@drawable/round_corner_bg"
            android:id="@+id/lecture_spinner"
            android:textAlignment="center"
            android:elevation="5dp"

            />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/datepicker_teacher"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_attendance"
            android:background="@drawable/round_corner_bg"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:elevation="5dp"
            android:id="@+id/mark_attendanceBTN"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_attendance"
            android:background="@drawable/round_corner_bg"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:elevation="5dp"
            android:id="@+id/update_attendanceBTN"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signout"
            android:background="@drawable/round_corner_bg"
            android:layout_marginHorizontal="30sp"
            android:layout_marginBottom="20sp"
            android:elevation="5sp"
            android:id="@+id/logout"/>
    </LinearLayout>
</ScrollView>