<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listOfClasses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.teachers.AssignClasses">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:paddingLeft="10dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/enter_teacherID"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/scode"
                android:textColor="@color/black"
                android:background="@drawable/round_corner_bg"
                android:layout_marginStart="40dp"
                android:textAlignment="center"
                android:textSize="30sp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/te"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:background="@drawable/round_corner_bg" />
            <EditText
                android:id="@+id/idTeacherSearch"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="30sp"
                android:inputType="number"
                android:hint="@string/teacherID"
                android:textAlignment="center"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_bg"
                />
        </LinearLayout>

    <Button
        android:id="@+id/idSearchTeacherButton"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:layout_height="45dp"
        android:textColor="@color/colorbg"
        android:background="@color/black"
        android:text="@string/search" />


    <TextView
        android:id="@+id/totalClasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <ListView
        android:id="@+id/listViewClasses"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner_bg" />

    <Button
        android:id="@+id/assignNewClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorbg"
        android:background="@color/black"
        android:text=" Assign a new Class" />
    </LinearLayout>

</ScrollView>