<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorbg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTo"
        android:layout_marginTop="80sp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textAlignment="center"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="120sp"
        android:entries="@array/role_choice"
        android:textAlignment="center"

        android:background="@drawable/round_corner_bg"
        android:id="@+id/role_spinner"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="50sp"
        android:background="@drawable/round_corner_bg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:paddingLeft="10sp"
        android:hint="  Username"
        android:inputType="textCapWords"
        android:id="@+id/usernameET"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="50sp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:background="@drawable/round_corner_bg"
        android:paddingLeft="10sp"
        android:hint="  Password"
        android:inputType="textPassword"
        android:id="@+id/passwordET" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="80sp"
        android:text="@string/login"
        android:textStyle="bold"
        android:background="#228899"
        android:id="@+id/loginBTN"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:layout_marginTop="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/forgot_password_TV"/>
    </LinearLayout>


</ScrollView>